set up deno debugging

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <div style="text-align: center">
       <div>
         <b>Users</b>
+        <img src="/public/images/odysseus_192x192.png" width="24"/>
         <hr />
         <div id="users"></div>
         <hr class="visible-xs visible-sm" />
