fixed exposing non-public files and minimized deno perms

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>Node Chat App</title>
-    <script src="/public/app.js"></script>
+    <script src="/app.js"></script>
   </head>
   <body>
     <div style="text-align: center">
       <div>
         <b>Users</b>
-        <img src="/public/images/odysseus_192x192.png" width="24"/>
+        <img src="/images/odysseus_192x192.png" width="24"/>
         <hr />
         <div id="users"></div>
         <hr class="visible-xs visible-sm" />
